--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="routes">Routes</string>
     <string name="busses">Busses</string>
     <string name="account">Account</string>
+    <string name="forgot_link">Link was sent, please check your inbox to reset your password</string>
 </resources>
